introduced flag printAll in PrintUtil and replaced output comments